# cmake-cpp-template

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
include/project/: library.h
src/: CMakeLists.txt  library.cpp
